[gd_scene load_steps=7 format=2]

[ext_resource path="res://ressources/logo/logo-spaceshot.png" type="Texture" id=1]
[ext_resource path="res://ressources/menu/bouton-start.png" type="Texture" id=2]
[ext_resource path="res://ressources/menu/bouton-quitter.png" type="Texture" id=3]
[ext_resource path="res://ressources/menu/bouton-options.png" type="Texture" id=4]
[ext_resource path="res://scripts/Main.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 175, 30 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Logo" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 100 )
texture = ExtResource( 1 )

[node name="BoutonStart" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 250 )
texture = ExtResource( 2 )

[node name="Aread2DStart" type="Area2D" parent="BoutonStart"]
position = Vector2( 7.69995, -144.326 )
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShapeStart" type="CollisionShape2D" parent="BoutonStart/Aread2DStart"]
position = Vector2( -9, 144 )
shape = SubResource( 1 )

[node name="BoutonOptions" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 350 )
texture = ExtResource( 4 )

[node name="Aread2DOptions" type="Area2D" parent="BoutonOptions"]
position = Vector2( 8.85529, -239.735 )
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShapeOptions" type="CollisionShape2D" parent="BoutonOptions/Aread2DOptions"]
position = Vector2( -8, 240 )
shape = SubResource( 1 )

[node name="BoutonQuitter" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 450 )
texture = ExtResource( 3 )

[node name="Area2DQuitter" type="Area2D" parent="BoutonQuitter"]
position = Vector2( 8.43726, -333.943 )
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShapeQuitter" type="CollisionShape2D" parent="BoutonQuitter/Area2DQuitter"]
position = Vector2( -8, 334 )
shape = SubResource( 1 )
[connection signal="input_event" from="BoutonStart/Aread2DStart" to="." method="_on_aread2DStart_input_event"]
[connection signal="input_event" from="BoutonOptions/Aread2DOptions" to="." method="_on_aread2DOptions_input_event"]
[connection signal="input_event" from="BoutonQuitter/Area2DQuitter" to="." method="_on_area2DQuitter_input_event"]
